--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,19 @@
     padding: 0;
 
     font-family: 'Open Sans', sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+
+    font-family: "Font Awesome 5 Free";
 }
 
-.container-big {
-    width: 1200px;
+.container-large {
+    width: 1000px;
+    margin: 0 auto;
 }
 .container-small {
     width: 800px;
+    margin: 0 auto;
 }
 
 .row::after {
@@ -24,18 +30,26 @@
 .fl-r {
     float: right;
 }
-
 .button {
     display: inline-block;
-    line-height: 24px;
+}
+.button a {
+    display: inline-block;
+    line-height: 28px;
+    text-decoration: none;
+}
+
+.bold {
+    font-weight: 700;
 }
 
 
 /* ======================== */
 
+/* nav-bar */
 header {
     background-color: #add1ea;
-    height: 400px;
+    margin-bottom: 150px;
 }
 
 nav {
@@ -58,18 +72,107 @@ nav li a {
     text-decoration: none;
     color: #000;
     font-weight: bold;
-    font-size: 14px;
 }
-
-nav .logo-container img {
+nav .logo-container {
+    height: 60%;    /* cazz */
+}
+nav .logo-container img {   /* height da sistemare */
     vertical-align: middle;
     padding-bottom: 5px;
+    height: 40%;
 }
 
-.button.blue {
+.blue-button {
     background-color: #1f63ff;
     color: #fff;
-    font-size: 12px;
-    font-weight: 400;
+    font-weight: normal; /* ??? */
     padding: 0 15px;
+}
+
+/* jumbotron */
+.jumbotron h1 {
+    font-size: 60px;
+    font-weight: bold;
+    padding: 50px 0 20px;
+}
+
+.jumbotron .text-container {
+    width: calc(40% - 30px);
+    margin-right: 30px;
+}
+.jumbotron .text-container p {
+   margin-bottom: 20px;
+}
+.jumbotron .text-container .button {
+   margin-bottom: 10px;
+}
+
+.jumbotron .text-container .icon i {
+    font-size: 40px;
+    font-weight: 900;
+    color: black;
+}
+
+.jumbotron .img-container {
+    width: 60%;
+}
+.jumbotron .img-container img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: -10%;
+}
+
+
+.pricing h2 {
+    font-size: 30px;
+    margin: 50px 0;
+    font-weight: bold;    
+}
+
+.pricing .radio-container {
+    display: inline-block;
+    margin: 20px 20px 20px 0;
+}
+
+/* pricing columns */
+.pricing .column > * {
+    border: 1px solid #ccc;
+    padding: 20px 10px;
+}
+.pricing .column {
+    font-size: 16px;
+}
+
+.pricing .col-head {
+    font-size: 16px;
+    padding: 5px 10px;
+}
+.pricing .column .col-head::before {
+    content: "\f007   ";
+    font-weight: 500;
+    text-align: center;
+}
+
+.pricing .column h3 {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+.pricing .monthly {
+    color: #aaa;
+    margin: 10px 0 30px;
+}
+
+.pricing .users.num::before {
+    content: "\f007   ";
+    font-weight: 500;
+}
+.pricing .users.mem-size::before {
+    content: "\f007   ";
+    font-weight: 500;
+}
+.pricing .users.functions::before {
+    content: "\f007   ";
+    font-weight: 500;
 }
