--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@
     line-height: 28px;
     text-decoration: none;
     padding: 0 15px;
+    text-align: center;
 }
 .button.blue a {
     background-color: #1f63ff;
@@ -45,7 +46,11 @@
     font-weight: 700;
 }
 
-
+h2 {
+    font-size: 30px;
+    margin: 50px 0;
+    font-weight: bold;    
+}
 /* ======================== */
 
 header {
@@ -114,12 +119,6 @@ nav .logo-container img {   /* height da sistemare */
     margin-bottom: -10%;
 }
 
-
-.pricing h2 {
-    font-size: 30px;
-    margin: 50px 0;
-    font-weight: bold;    
-}
 
 .pricing .radio-container {
     display: inline-block;
@@ -247,13 +246,12 @@ nav .logo-container img {   /* height da sistemare */
 }
 
 
-.pricing .button.blue {
+.pricing .column.small .button.blue {
     width: 100%;
     margin: 30px 0 20px;
 }
 .pricing .button.blue a {
     width: 100%;
-    text-align: center;
 }
 
 .pricing hr {
@@ -275,4 +273,30 @@ nav .logo-container img {   /* height da sistemare */
 }
 .column.large .button{
     width: 30%;
+}
+
+
+/* partner finder */
+
+.partner-finder img-container {
+    width: 50%;
+}
+.partner-finder img-container img {
+    width: 100%;
+}
+
+.partner-finder text-container {
+    width: 50%;
+}
+
+.button.white {
+    border: 1px solid black;
+}
+
+
+.operations .item-operations {
+    width: calc(100% / 3 -20px);
+}
+.item-operations .img-container {
+    width: 100%;
 }
