--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,11 @@
     float: right;
 }
 
+.gutter-30 {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
 .button a {
     display: inline-block;
     line-height: 28px;
@@ -50,6 +55,19 @@ h2 {
     margin: 50px 0;
     font-weight: bold;    
 }
+
+h3 {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+.short-hr {
+    width: 30px;
+    margin: 30px 0;
+    color: #ccc;
+}
+
 /* ======================== */
 
 header {
@@ -161,12 +179,6 @@ nav .button a{
     text-align: center;
 }
 
-.pricing h3 {
-    font-size: 20px;
-    font-weight: bold;
-    margin: 10px 0;
-}
-
 .pricing .monthly {
     color: #aaa;
     margin: 10px 0 30px;
@@ -259,12 +271,6 @@ nav .button a{
     width: 100%;
 }
 
-.pricing hr {
-    width: 20%;
-    margin: 30px 0;
-    color: #ccc;
-}
-
 .pricing h4 {
     font-weight: 800;
 }
@@ -300,19 +306,145 @@ nav .button a{
     padding: 0 15px;
 }
 
+.partners-title {
+    margin: 50px auto;
+}
 
 /* operations */
 
 .operations .item-operations {
     width: calc(100% / 3 - 20px);
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
-.operations .item-operations::nth-of-type(2) {
+/* .item-operations::nth-of-type(2), 
+.item-operations::nth-of-type(5) {
     margin: 0 30px;
-}
+}   non ho funzionato, risolto con classe gutter-30 */
 
 .item-operations .img-container {
     width: 100%;
 }
 .item-operations .img-container img {
     width: 100%;
+}
+
+
+/* partners */
+
+.partners-title h2 {
+    margin-bottom: 30px;
+}
+
+.partners-title a {
+    color: #1f63ff;
+    margin: 30px 0;
+}
+
+
+.partners-main {
+    background-color: #add1ea;
+}
+
+/* partners' logos strip */
+
+.strip {
+    height: 300px;
+}
+
+.strip .center {
+    width: 40%;
+    height: 300px;
+    background-color: whitesmoke;
+    padding: 0 40px;
+
+    /* position: relative; */
+}
+
+.strip .center .logo-container {
+    width: 20%;
+    /* position: absolute;
+    top: 0; */
+}
+.strip .center .logo-container svg {
+    width: 100%;
+}
+
+.strip .center .short-hr {
+    margin: 10px 0 30px;
+}
+
+/* .strip .center p:not(.bold) {
+    margin-top: 10px;
+} ?????? provato anche con first-child*/
+
+.strip .side {
+    width: 30%;
+    height: 100%;
+}
+.strip .side .logo-container {
+    width: 50%;
+    height: 150px;
+    position: relative;
+}
+
+.strip .side .logo-container svg {
+    width: 60%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    filter: invert(100%);
+}
+
+.strip .side.left .logo-container:nth-child(1) {
+    background-color: #94d595;
+    border: 10px solid #a0e5a2;
+}
+.strip .side.left .logo-container:nth-child(2) {
+    background-color: #6b012b;
+}
+.strip .side.left .logo-container:nth-child(3) {
+    background-color: #3096d3;
+}
+.strip .side.left .logo-container:nth-child(4) {
+    background-color: #f40102;
+}
+
+.strip .side.right .logo-container:nth-child(1) {
+    background-color: #f40102;
+}
+.strip .side.right .logo-container:nth-child(2) {
+    background-color: #add1ea;
+}
+.strip .side.right .logo-container:nth-child(3) {
+    background-color: #072486;
+}
+.strip .side.right .logo-container:nth-child(4) {
+    background-color: #fbd600;
+}
+
+
+.new-business .text-container {
+    width: 50%;
+}
+
+.new-business {
+    height: 300px;
+}
+
+.new-business .button-container {
+    width: 50%;
+    position: relative;
+}
+
+.new-business .button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(50%, 50%);
+}
+.new-business .button a {
+    background-color: #fff;
+    
 }
