--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@
     line-height: 28px;
     text-decoration: none;
     text-align: center;
+    padding: 0 15px;
 }
 .button.blue a {
     background-color: #1f63ff;
@@ -48,6 +49,16 @@
 
 .bold {
     font-weight: 700;
+}
+
+.centered { /* bisogna dare position relative al padre*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.pos-rel {
+    position: relative;
 }
 
 h2 {
@@ -349,12 +360,12 @@ nav .button a{
 /* partners' logos strip */
 
 .strip {
-    height: 300px;
+    height: 360px;
 }
 
 .strip .center {
     width: 40%;
-    height: 300px;
+    height: 360px;
     background-color: whitesmoke;
     padding: 0 40px;
 
@@ -384,7 +395,7 @@ nav .button a{
 }
 .strip .side .logo-container {
     width: 50%;
-    height: 150px;
+    height: 180px;
     position: relative;
 }
 
@@ -424,27 +435,56 @@ nav .button a{
     background-color: #fbd600;
 }
 
+.new-business {
+    height: 300px;
+    padding: 100px 0;
+}
 
 .new-business .text-container {
     width: 50%;
+    height:100%;
 }
-
-.new-business {
-    height: 300px;
+.new-business .text-container h2 {
+    margin: 0;
 }
 
 .new-business .button-container {
     width: 50%;
-    position: relative;
+    margin: 10px 0;
 }
 
 .new-business .button {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(50%, 50%);
+
 }
 .new-business .button a {
     background-color: #fff;
-    
+    padding: 0 30px;
 }
+
+
+.faq {
+    margin: 50px auto;
+}
+.faq > * {
+    border-bottom: 1px solid #ccc;
+}
+
+.faq h3 {
+    margin: 0;
+    padding: 40px 0;
+}
+.faq p {
+    padding: 20px 0;
+    position: relative;
+}
+.faq p::after {
+    font-family: "Font Awesome 5 Free";
+    content: "\f078";
+    font-weight: 900;
+    position: absolute;
+    right: 20px;
+}
+
+
+/* footer */
+
