--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,7 @@ nav .button a{
 
 
 .faq {
-    margin: 50px auto;
+    margin: 100px auto 440px;
 }
 .faq > * {
     border-bottom: 1px solid #ccc;
@@ -491,15 +491,22 @@ nav .button a{
 
 
 /* footer */
+.main-container {
+    background-color: #fff;
+}
 
 footer {
     background-color: #000;
     color: #fff;
+    width: 100%;
 
     height: 390px;
-    /* position: fixed; */
-    /* z-index: -1; */
-}
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    z-index: -100;
+} 
 
 footer .container-large {
     padding: 50px 0;
