--- a/css/style.css
+++ b/css/style.css
@@ -313,9 +313,14 @@ nav .button a{
 
 .partner-finder .text-container {
     width: 50%;
+    padding: 30px 60px;
+}
+.partner-finder .text-container p {
+    margin: 20px 0;
+    font-weight: 600;
 }
 
-.partner-finder .button.white {
+.partner-finder .button.white a {
     border: 1px solid black;
     display: inline-block;
     padding: 0 15px;
