--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@ nav .button a{
 
 .partner-finder .text-container {
     width: 50%;
-    padding: 30px 60px;
+    padding: 30px 0 30px 60px;
 }
 .partner-finder .text-container p {
     margin: 20px 0;
